refactor: keep the context alive while mapping repositories and validating attributes
This should speed things up considerably